--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -10,3 +10,8 @@ ru:
     one: '%{count} ошибка не дает сохранить карточку'
     few: '%{count} ошибки не дают сохранить карточку'
     many: '%{count} ошибок не дают сохранить карточку'
+  helpers:
+    submit:
+      card:
+        create: "Добавить карточку"
+        update: "Сохранить изменения"
