--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,5 +1,16 @@
 ru:
   notsame: "Должны быть не одинаковые"
+  project_description: 'Первый в мире удобный менеджер флеш-карточек. Именно так.'
+  project_name: 'Флэшкарточкер'
+  author: 'Lostmind'
+  link_back: 'Назад'
+  confirm: 'Вы уверенны?'
+  link_show: 'Показать'
+  link_edit: 'Изменить'
+  link_destroy: 'Удалить'
+  link_all_cards: 'Все карточки'
+  change_card_titel: 'Изменить карточку'
+  new_card_titel: 'Новая карточка'
   activerecord:
     attributes:
      card:
